Fix filter size and spacing issues

--- a/app/assets/stylesheets/components/_desktop_responsive.scss
+++ b/app/assets/stylesheets/components/_desktop_responsive.scss
@@ -1,9 +1,3 @@
-@media only screen and (max-width: 767px) {
-  .filters {
-    padding-right: 0;
-  }
-}
-
 @media only screen and (max-width: 991px) {
   #about_us .side-affix li {
     display: inline;
