--- a/app/assets/stylesheets/pages/welcome.scss
+++ b/app/assets/stylesheets/pages/welcome.scss
@@ -86,7 +86,7 @@
 
 main {
   min-height: 800px;
-  margin-top: 100px;
+  margin-top: 25px;
   margin-bottom: 35px;
 }
 
